<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lilac DCP</string>

    <!--  Login Screen  -->
    <string name="login_screen_name">Enter your name</string>
    <string name="login_screen_passcode">Password</string>
    <string name="login_screen_error_title">Log In Error</string>
    <string name="login_screen_invalid_passcode_error">Password incorrect.</string>
    <string name="login_screen_expired_passcode_error">Password expired.</string>
    <string name="bottom_tab_text_1" translatable="false">Home</string>
    <string name="bottom_tab_text_2" translatable="false">Doctors</string>
    <string name="bottom_tab_text_3" translatable="false">Booking</string>
    <string name="bottom_tab_text_4" translatable="false">Profile</string>
    <string name="bottom_tab_doc_1" translatable="false">Dashboard</string>
    <string name="bottom_tab_doc_2" translatable="false">Booking</string>
    <string name="bottom_tab_doc_3" translatable="false">Profile</string>
    <string name="bottom_tab_doc_4" translatable="false">Calender</string>


    <string name="bottom_tab_doc_1" translatable="false">Dash</string>
    <string name="bottom_tab_doc_2" translatable="false">calender</string>
    <string name="bottom_tab_doc_3" translatable="false">Booking</string>
    <string name="bottom_tab_doc_4" translatable="false">Profile</string>

</resources>
