<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:title="@string/bottom_tab_doc_1"
        android:icon="@drawable/ic_baseline_show_chart_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:title="@string/bottom_tab_doc_4"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_news"
        android:enabled="true"
        android:icon="@drawable/ic_booking"
        android:title="@string/bottom_tab_doc_2"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_notification"
        android:enabled="true"
        android:title="@string/bottom_tab_doc_3"
        android:icon="@drawable/ic_patienticon"
        app:showAsAction="always" />
</menu>